# phasematching_calc

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTORS  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: PULL_REQUEST_TEMPLATE  codeql-analysis.yml  python-test.yml
config/: __init__.py  definitions.py
docs/: IsoSample.rst  Lasers.rst  Layer.rst  examples.rst  phasematching.rst
phasematching_calc/: H2O_1.txt  __init__.py  __version__.py  _isosample.py  _lasers.py  _layer.py  phasematch.py  samp1.json
phasematching_calc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: example.py  example10.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  test_mcalc4.py
tests/: CCl4_paste.txt  CH3CN_paste_1.txt  CaF2_Malitson.txt  Ch2Cl2n_paste.txt  D2O_paste.txt  MeOH_elkashef_ApplSpec_paste.txt  MeOH_kozma_ApplSpec_paste.txt  MeOH_moutzouris_ApplSpec_paste.txt  Silicon_shk_ir.txt  __init__.py  las.json  samp1.json  sapphire1.txt  test_file1.txt  test_file2.txt  test_isosample.py  test_lasers.py  test_mcalc.py  test_mcalc2.py  test_mcalc3.py  test_mcalc4.py  test_mcalc5.py  test_phasematch.py
