[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "phasematching_calc"
dist-name = "phasematching_calc"
author = "@kameyer226"
home-page = "https://github.com/wright-group/phasematching_calc"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["numpy", "sympy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/wright-group/phasematching_calc"
Issues = "https://github.com/wright-group/phasematching_calc/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit", "pytest", "pytest-cov", "WrightTools"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
